--- a/playbooks/vcenter_sddc_deploy.yml
+++ b/playbooks/vcenter_sddc_deploy.yml
@@ -26,11 +26,11 @@
 
   vars:
     repo_dir: '/opt/repo'
-    vcsa_iso: 'VMware-VCSA-all-6.7.0-9451876.iso'
+    vcsa_iso: 'VMware-VCSA-all-6.7.0-15132721.iso'
     vcsa_task_directory: '/opt/ansible/roles/vcsa-deploy/tasks'
 
     ovftool: '/mnt/vcsa/ovftool/lin64/ovftool'
-    vcsa_ova: 'vcsa/VMware-vCenter-Server-Appliance-6.7.0.14000-9451876_OVF10.ova'
+    vcsa_ova: 'vcsa/VMware-vCenter-Server-Appliance-6.7.0.42000-15132721_OVF10.ova'
     mount_dir_path: '/mnt'
 
     appliance_type: 'embedded'
@@ -40,25 +40,26 @@
     disk_mode: 'thin'
     ssh_enable: true
 
-    vcenter_appliance_name: 'vcenter'
+    vcenter_appliance_name: 'vcenter6.7'
     vcenter_appliance_size: 'small'
 
+    target_esxi: "192.168.10.150"
     target_esxi_username: '{{ vault_esxi_username }}'
     target_esxi_password: '{{ vault_esxi_password }}'
-    target_esx_datastore: 'local-t410-3TB'
-    target_esx_portgroup: 'Management'
+    target_esx_datastore: 'vsanDatastore'
+    target_esx_portgroup: 'PG_MGMT' #if you want to asign a DVS port, target_esxi must be a vcenter server,otherwise target_esx_portgroup must be port group of vss
 
     time_sync_tools: false
 
     vcenter_password: '{{ vault_vcenter_password }}'
-    vcenter_fqdn: 'vcenter.home.virtualelephant.com'
-    vcenter_ip_address: '192.168.0.25'
-    vcenter_netmask: '255.255.0.0'
-    vcenter_gateway: '192.168.0.1'
-    vcenter_net_prefix: '16'
+    vcenter_fqdn: 'vcenter6.7.flow-ever.com'
+    vcenter_ip_address: '192.168.0.10'
+    vcenter_netmask: '255.255.255.0'
+    vcenter_gateway: '192.168.0.254'
+    vcenter_net_prefix: '24'
 
     dns_servers:
-            - 192.168.0.1
+            - 192.168.10.51
     ntp_servers:
             - 132.163.96.1
             - 132.163.97.1
